--- a/cluster/apps/auth-system/vaultwarden/helm-release.yaml
+++ b/cluster/apps/auth-system/vaultwarden/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
   # https://github.com/k8s-at-home/charts/blob/master/charts/stable/vaultwarden/values.yaml
   values:
     image:
-      repository: vaultwarden/server
+      repository: ghcr.io/k8s-at-home/vaultwarden
       tag: 1.25.0
     strategy:
       type: RollingUpdate
