--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       retries: 3
   values:
     image:
-      repository: zwavejs/zwavejs2mqtt
+      repository: ghcr.io/zwave-js/zwavejs2mqtt
       tag: 6.12.0
     env:
       TZ: ${TZ}
