--- a/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
+++ b/cluster/apps/monitoring/network-ups-tools/helm-release.yaml
@@ -18,6 +18,7 @@ spec:
       interval: 5m
   values:
     image:
+      repository: ghcr.io/k8s-at-home/network-ups-tools
       tag: v2.8.0
     env:
       TZ: ${TZ}
